# PyMongoSQL

./: .coverage  .coveragerc  .flake8  .gitignore  README.md  pyproject.toml  requirements-optional.txt  requirements-test-sqlalchemy14.txt  requirements-test-sqlalchemy2.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: sqlalchemy_integration.md
examples/: sqlalchemy_integration.py
pymongosql/: __init__.py  common.py  connection.py  cursor.py  error.py  executor.py  helper.py  result_set.py  retry.py  sqlalchemy_dialect.py
pymongosql/executor/: __init__.py  base.py  dml.py  dql.py
tests/: README.md  conftest.py  docker-compose.test.yml  mongo_test_helper.py  run_test_server.py  server_config.json  session_test_summary.md  setup_mongo.bat  setup_mongo.ps1  test_command_codec_options.py  test_connection.py  test_connection_transaction.py  test_cursor.py  test_cursor_aggregate.py  test_cursor_delete.py  test_cursor_insert.py  test_cursor_parameters.py  test_cursor_update.py  test_ddl_view.py  test_delete_builder.py  test_delete_handler.py  test_dict_cursor.py  test_dql_parser.py  test_explain.py  test_insert_builder.py  test_insert_handler.py  test_pandas_sqlalchemy.py  test_projection_functions.py  test_query_builder.py  test_query_handler.py  test_result_set.py  test_result_set_pagination.py  test_retry.py  test_sql_parser.py  test_sql_parser_aggregate_fun.py  test_sql_parser_comprehensive.py  test_sql_parser_delete.py  test_sql_parser_general.py  test_sql_parser_group.py  test_sql_parser_insert.py  (+12 more)
(+40 files in other folders)
